# fastapi-pex-docker

./: .dockerignore  .gitignore  Dockerfile.app  Dockerfile.deploy  Dockerfile.deps  Dockerfile.src  README.md  justfile  pyproject.toml  requirements.txt
.github/: ci-requirements.txt
.github/workflows/: build_and_push.yml
appex/: database.py  main.py
