[tool.poetry]
name = "appex"
description = "Understading how pex works by playing with it."
authors = ["Gabriel Montañola <gabriel@montanola.com>"]
license = "MIT"
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",
    "B008",
]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
